--- a/article3/style.css
+++ b/article3/style.css
@@ -1,6 +1,6 @@
 body {
     margin:0;
-    max-width: 430px;
+    max-width: 530px;
 }
 
 p, ul {
@@ -91,10 +91,10 @@ h1 {
     margin-top: -370px;
 }
 
-#cameratext {
+/* #cameratext {
     margin-left: auto;
     margin-right: auto;
     position: relative;
     padding: 0px 60px;
     margin-top: -460px;
-}
+} */
